syntax = "proto3";
package proto;
option go_package = "./;proto";
import "common.proto";
//protoc -I . --go_out=plugins=grpc:. *.proto

message Msg {
  oneof Payload {
    Prepare prepare = 1;
    PrepareVote prepareVote = 2;
    PreCommit preCommit = 3;
    PreCommitVote preCommitVote = 4;
    Commit commit = 5;
    CommitVote commitVote = 6;
    Decide decide = 7;
    NewView newView = 8;
    Request request = 9;
    Reply reply = 10;
    PbValue pbValue = 11;
    PbEcho pbEcho = 12;
    PbFinal pbFinal = 13;
    CoinShare coinShare = 14;
    SpbFinal spbFinal = 15;
    Done done = 16;
    Halt halt = 17;
    PreVote preVote = 18;
    Vote vote = 19;
  }
//   string senderAddress = 11;
}

message Empty {}

message Prepare {
  Block curProposal = 1;
  QuorumCert highQC = 2;
  uint64 viewNum = 3;
}

message PrepareVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message PreCommit {
  QuorumCert prepareQC = 1;
  uint64 viewNum = 2;
}

message PreCommitVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message Commit {
  QuorumCert preCommitQC = 1;
  uint64 viewNum = 2;
}

message CommitVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message Decide {
  QuorumCert commitQC = 1;
  uint64 viewNum = 2;
}

message NewView {
  QuorumCert prepareQC = 1;
  uint64 viewNum = 2;
}

message Request {
  string cmd = 1;
  string clientAddress = 2;
}

message Reply {
  string result = 1;
  string command = 2;
}

message PbValue {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  string invokePhase = 4;
  bytes proposal = 5;
  bytes proof = 6;
}

message PbEcho {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  string invokePhase = 4;
  bytes proposal = 5;
  bytes partialSig = 6;
}

message PbFinal {
  uint64 id = 1;
  uint64 round = 2;
  bytes proposal = 3;
  bytes signature = 4;
}

message CoinShare {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  bytes partialSig = 4;
}

message SpbFinal {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  bytes proposal = 4;
  bytes signature = 5;
}

message Done {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
}

message Halt {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  bytes final = 4;
}

message PreVote {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  uint64 leader = 4;
  uint64 flag = 5;
  bytes proposal = 6;
  bytes signature = 7;
  bytes partialSig = 8;
}

message Vote {
  uint64 id = 1;
  uint64 round = 2;
  uint64 sid = 3;
  uint64 leader = 4;
  uint64 flag = 5;
  bytes proposal = 6;
  bytes signature = 7;
  bytes partialSig = 8;
}

service HotStuffService {
  rpc SendMsg(Msg) returns (Empty) {}
  rpc SendRequest(Msg) returns (Empty) {}
  rpc SendReply(Msg) returns (Empty) {}
}